# juyou-switcher

./: .gitignore  API_DOCS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICK_SETUP_FEATURE.md  README.md  README_DE.md  README_JA.md  README_ZH.md  SECURITY.md  SUPPORT.md  UI_PREVIEW.md  deplink.html  icon-design.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts  wechatpay-desktop-integration.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_issue.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  claude.yml  release.yml
docs/guides/: codex-deepseek-routing-guide-en.md  codex-deepseek-routing-guide-ja.md  codex-deepseek-routing-guide-zh.md  codex-official-auth-preservation-guide-en.md  codex-official-auth-preservation-guide-ja.md  codex-official-auth-preservation-guide-zh.md  codex-unified-session-history-guide-en.md  codex-unified-session-history-guide-ja.md  codex-unified-session-history-guide-zh.md  proxy-guide-zh.md
docs/release-notes/: v1.0.0-zh.md  v3.10.0-en.md  v3.10.0-ja.md  (+57 more)
flatpak/: README.md  com.juyouswitcher.desktop.desktop  com.juyouswitcher.desktop.metainfo.xml  com.juyouswitcher.desktop.yml
juyou-website/: .env.example  .gitignore  Cargo.toml  Makefile  README.md
juyou-website/src/: main.rs
juyou-website/web/: README.md  index.html  package.json
juyou-website/web/src/: main.tsx  styles.css
scripts/: extract-icons.js
src/: App.tsx  index.css  index.html  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
(+198 files in other folders)
